--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,28 @@
 <html>
 <head>
   <title>SBA 318</title>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 
 <body>
   <h1>Welcome to my page</h1>
   <p>This is a EJS page.</p>
+
+
+
+
+  <h2>Add a New User</h2>
+  <form action="/users" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+    <br><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+    <br><br>
+    <button type="submit">Add User</button>
+  </form>
+
 
 
 
