--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,40 +1,110 @@
 body {
-    background-color: #fce4ec; 
-    font-family: 'Arial', sans-serif;
-    color: #333;
-  }
-  
-  h1 {
-    color: #ffccbc; 
-    text-align: center;
-    font-size: 2.5em;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  li {
-    background-color: #fff3e0; 
-    border: 1px solid #ffccbc;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-  
-  p {
-    color: #8e24aa; 
-    font-size: 1.2em;
-    text-align: center;
-  }
-  
-  a {
-    color: #8e24aa;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-  
+  background: linear-gradient(135deg, #89f7fe, #66a6ff); 
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.main-container {
+  background-color: rgba(255, 255, 255, 0.9); 
+  padding: 50px;
+  border-radius: 20px;
+  max-width: 450px;
+  width: 100%;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+h1 {
+  color: #333;
+  font-size: 2.4em;
+  margin-bottom: 15px;
+  letter-spacing: 1px;
+  font-weight: 600;
+}
+
+h2 {
+  color: #555;
+  font-size: 1.5em;
+  margin-bottom: 25px;
+  font-weight: 400;
+}
+
+
+form {
+  background-color: #f8f9fa;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
+
+label {
+  font-size: 1em;
+  color: #555;
+  display: block;
+  margin-bottom: 8px;
+  font-weight: 500;
+}
+
+input {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 1em;
+  box-sizing: border-box;
+  transition: border 0.3s ease;
+}
+
+input:focus {
+  border-color: #66a6ff;
+  outline: none;
+}
+
+button {
+  background-color: #66a6ff;
+  border: none;
+  padding: 12px;
+  color: white;
+  font-size: 1.2em;
+  border-radius: 25px;
+  cursor: pointer;
+  width: 100%;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+button:hover {
+  background-color: #5591e6;
+  transform: translateY(-2px);
+}
+
+
+
+
+.image-container {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.image-container img {
+  display: flex;
+  max-width: 100%;
+  height: 400px;
+  display: inline-block;
+}
+
+
+.list_of_users {
+  display: flex;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
