--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SBA 318</title>
+  <title>Login Form</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
-
-
 <body>
-  <h1>Welcome to my page</h1>
-  <p>This is a EJS page.</p>
 
-
-
-
-  <h2>Add a New User</h2>
-  <form action="/users" method="POST">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
-    <br><br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <br><br>
-    <button type="submit">Add User</button>
-  </form>
-
-
-
+  <div class="main-container">
+    <h1>Welcome</h1>
+    <h2>Register your account</h2>
+    <form action="/users" method="POST">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+      <button type="submit">Login</button>
+    </form>
+  </div>
 
 </body>
 </html>
